--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="title_activity_register">RegisterActivity</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_feed">Feed</string>
-    <string name="title_wallet">Wallet</string>
+    <string name="title_inbox">Inbox</string>
     <string name="title_profile">Profile</string>
     <string name="password">Password</string>
     <string name="email">Email</string>
@@ -12,4 +12,15 @@
     <string name="register">Register</string>
     <string name="forgot_password">Forgot Password</string>
     <string name="resend_verification">Resend Verification</string>
+
+    //For feed fragment
+    <string name="username">Username</string>
+    <string name="country">Country</string>
+    <string name="profession">Profession</string>
+    <string name="logout">Logout</string>
+    <string name="Edit">Edit</string>
+    <string name="Update">Update</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
