--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,9 +18,11 @@
     <string name="country">Country</string>
     <string name="profession">Profession</string>
     <string name="logout">Logout</string>
-    <string name="Edit">Edit</string>
+    <string name="Edit">Edit Profile</string>
     <string name="Update">Update</string>
     <string name="error">Error</string>
+    <string name="settings">Account Settings</string>
+    <string name="appSettings">Application Settings</string>
 
     //For makePost
     <string name="title">Title</string>
@@ -29,4 +31,5 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_profile_setting">ProfileSetting</string>
 </resources>
